# mcp-micropython-bridge

./: README.md  check_micropython.py  claude_desktop_config_example.json  design.md  dev_server.py  pyproject.toml
device_root/: boot.py  setup.py
doc/: context_saving_tools.md  design.md  webrepl_design.md
src/mcp_micropython/: __init__.py  device_test_cli.py  raw_repl.py  serial_manager.py  server.py  session_manager.py  static_resources.py  transport.py
src/mcp_micropython/resources/: limitations.md  recipes.md  troubleshooting.md
src/mcp_micropython/tools/: __init__.py  device.py  execution.py  filesystem.py
tests/: test_filesystem_tools.py  test_transport.py
